Introduce AMC obseration type

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: amc.core
-Title: What the Package Does (One Line, Title Case)
+Title: AMC Climate Analysis Library - Core
 Version: 0.0.0.9000
 Authors@R: 
     person("Matthew", "Coad", , "matthew_coad@hotmail.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Provides core components for using AMC data packages.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
