Add Met Uk, hadley dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(amc_dataset_class)
 export(amc_datasource_class)
+export(download_metuk_hadcet_monthly)
 export(download_ncei_total_solar_irradiance)
 export(get_amc_dataset_path)
 export(get_amc_dataset_repository_path)
@@ -16,6 +17,10 @@ export(gistemp_zonal_annual_means_dataset_code)
 export(global_zone_code)
 export(global_zone_type_code)
 export(hemisphere_zone_type_code)
+export(iac_annual_historical_co2_code)
+export(iac_annual_historical_co2_dataset)
+export(iac_datasource)
+export(iac_datasource_code)
 export(import_amc_dataset_file)
 export(issi_datasource)
 export(issi_datasource_code)
@@ -27,6 +32,14 @@ export(list_gistemp_dataset)
 export(list_issi_dataset)
 export(list_ncei_dataset)
 export(list_temprecord_dataset)
+export(list_zone)
+export(list_zone_type)
+export(metuk_datasource)
+export(metuk_datasource_code)
+export(metuk_hadcet_daily_dataset)
+export(metuk_hadcet_daily_dataset_code)
+export(metuk_hadcet_monthly_dataset)
+export(metuk_hadcet_monthly_dataset_code)
 export(ncei_datasource)
 export(ncei_datasource_code)
 export(ncei_total_solar_irradiance_code)
@@ -36,7 +49,9 @@ export(new_amc_datasource)
 export(northern_hemisphere_zone_code)
 export(prepare_amc_dataset_repository)
 export(read_gistemp_zonal_annual_means)
+export(read_iac_annual_historical_co2)
 export(read_issi_tsi_comp)
+export(read_metuk_hadcet_monthly)
 export(read_temprecord_nhtr)
 export(southern_hemisphere_zone_code)
 export(temprecord_datasource)
