Reimplent IAC dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(amc_dataset_class)
 export(amc_dataset_status)
 export(amc_datasource_class)
 export(download_amc_dataset)
+export(download_iac_co2_yearly_dataset)
 export(download_metuk_hadcet_daily_dataset)
 export(download_metuk_hadcet_monthly_dataset)
 export(download_test_test1_dataset)
@@ -16,17 +17,16 @@ export(get_amc_repository_path)
 export(global_zone_code)
 export(global_zone_type_code)
 export(hemisphere_zone_type_code)
+export(iac_co2_yearly_dataset)
+export(iac_datasource)
 export(import_amc_dataset_file)
 export(list_amc_dataset)
 export(list_amc_datasource)
 export(list_zone)
 export(list_zone_type)
 export(metuk_datasource)
-export(metuk_datasource_code)
 export(metuk_hadcet_daily_dataset)
-export(metuk_hadcet_daily_dataset_code)
 export(metuk_hadcet_monthly_dataset)
-export(metuk_hadcet_monthly_dataset_code)
 export(new_amc_dataset)
 export(new_amc_datasource)
 export(northern_hemisphere_zone_code)
@@ -34,13 +34,12 @@ export(prepare_amc_dataset)
 export(prepare_amc_dataset_repository)
 export(read_amc_dataset)
 export(read_amc_dataset_state)
+export(read_iac_co2_yearly)
 export(read_metuk_hadcet_monthly)
 export(read_test_test1)
 export(run_download_amc_dataset)
 export(save_amc_dataset_state)
 export(southern_hemisphere_zone_code)
 export(test_dataset1)
-export(test_dataset1_code)
 export(test_datasource)
-export(test_datasource_code)
 importFrom(rlang,.data)
