Check iac dataset & cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(download_amc_dataset)
 export(download_iac_co2_yearly_dataset)
 export(download_metuk_hadcet_daily_dataset)
 export(download_metuk_hadcet_monthly_dataset)
+export(download_metuk_hadcet_yearly_dataset)
 export(download_test_test1_dataset)
 export(get_amc_dataset_path)
 export(get_amc_dataset_repository_path)
@@ -27,6 +28,7 @@ export(list_zone_type)
 export(metuk_datasource)
 export(metuk_hadcet_daily_dataset)
 export(metuk_hadcet_monthly_dataset)
+export(metuk_hadcet_yearly_dataset)
 export(new_amc_dataset)
 export(new_amc_datasource)
 export(northern_hemisphere_zone_code)
@@ -36,6 +38,7 @@ export(read_amc_dataset)
 export(read_amc_dataset_state)
 export(read_iac_co2_yearly)
 export(read_metuk_hadcet_monthly)
+export(read_metuk_hadcet_yearly)
 export(read_test_test1)
 export(run_download_amc_dataset)
 export(save_amc_dataset_state)
