amc funtions are only api to AMC datasets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,17 +4,13 @@ export(amc_dataset_class)
 export(amc_dataset_status)
 export(amc_datasource_class)
 export(download_amc_dataset)
-export(download_iac_co2_yearly_dataset)
-export(download_metuk_hadcet_daily_dataset)
-export(download_metuk_hadcet_monthly_dataset)
-export(download_metuk_hadcet_yearly_dataset)
-export(download_test_test1_dataset)
 export(get_amc_dataset_path)
 export(get_amc_dataset_repository_path)
 export(get_amc_datasource_repository_path)
-export(get_amc_default_repository_path)
 export(get_amc_observation_type)
 export(get_amc_repository_path)
+export(giss_datasource)
+export(giss_ta_zonal_yearly_dataset)
 export(global_zone_code)
 export(global_zone_type_code)
 export(hemisphere_zone_type_code)
@@ -36,13 +32,6 @@ export(prepare_amc_dataset)
 export(prepare_amc_dataset_repository)
 export(read_amc_dataset)
 export(read_amc_dataset_state)
-export(read_iac_co2_yearly)
-export(read_metuk_hadcet_monthly)
-export(read_metuk_hadcet_yearly)
-export(read_test_test1)
-export(run_download_amc_dataset)
 export(save_amc_dataset_state)
 export(southern_hemisphere_zone_code)
-export(test_dataset1)
-export(test_datasource)
 importFrom(rlang,.data)
