Convert all datasets to new format

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ export(hemisphere_zone_type_code)
 export(iac_co2_yearly_dataset)
 export(iac_datasource)
 export(import_amc_dataset_file)
+export(issi_datasource)
+export(issi_tsicomp_dataset)
 export(list_amc_dataset)
 export(list_amc_datasource)
 export(list_zone)
@@ -25,6 +27,8 @@ export(metuk_datasource)
 export(metuk_hadcet_daily_dataset)
 export(metuk_hadcet_monthly_dataset)
 export(metuk_hadcet_yearly_dataset)
+export(ncei_datasource)
+export(ncei_tsi_dataset)
 export(new_amc_dataset)
 export(new_amc_datasource)
 export(northern_hemisphere_zone_code)
@@ -34,4 +38,6 @@ export(read_amc_dataset)
 export(read_amc_dataset_state)
 export(save_amc_dataset_state)
 export(southern_hemisphere_zone_code)
+export(tempr_datasource)
+export(tempr_nhtr_dataset)
 importFrom(rlang,.data)
