--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,26 +9,25 @@ export(get_amc_dataset_repository_path)
 export(get_amc_datasource_repository_path)
 export(get_amc_observation_type)
 export(get_amc_repository_path)
-export(giss_datasource)
-export(giss_ta_zonal_yearly_dataset)
+export(giss)
+export(giss_ta_zonal_yearly)
 export(global_zone_code)
 export(global_zone_type_code)
 export(hemisphere_zone_type_code)
-export(iac_co2_yearly_dataset)
-export(iac_datasource)
+export(iac)
+export(iac_co2_yearly)
 export(import_amc_dataset_file)
-export(issi_datasource)
-export(issi_tsicomp_dataset)
+export(issi)
+export(issi_tsicomp)
 export(list_amc_dataset)
 export(list_amc_datasource)
 export(list_zone)
 export(list_zone_type)
-export(metuk_datasource)
-export(metuk_hadcet_daily_dataset)
-export(metuk_hadcet_monthly_dataset)
-export(metuk_hadcet_yearly_dataset)
-export(ncei_datasource)
-export(ncei_tsi_dataset)
+export(metuk)
+export(metuk_hadcet_monthly)
+export(metuk_hadcet_yearly)
+export(ncei)
+export(ncei_tsi)
 export(new_amc_dataset)
 export(new_amc_datasource)
 export(northern_hemisphere_zone_code)
@@ -38,6 +37,8 @@ export(read_amc_dataset)
 export(read_amc_dataset_state)
 export(save_amc_dataset_state)
 export(southern_hemisphere_zone_code)
-export(tempr_datasource)
-export(tempr_nhtr_dataset)
+export(tempr)
+export(tempr_nhtr)
+export(view_amc_dataset)
+export(view_amc_datasource)
 importFrom(rlang,.data)
